Spacing corrected in mobile.css and style.css

--- a/mobile.css
+++ b/mobile.css
@@ -85,6 +85,7 @@ img{
 .photoscontainer div{
     width: 300px;
     height: 400px;
+    margin-bottom: 150px;
 }
 .photoname{
     font-size: 8vw;
